--- a/platform/mv3/extension/_locales/fy/messages.json
+++ b/platform/mv3/extension/_locales/fy/messages.json
@@ -232,11 +232,11 @@
     "description": "Label for a checkbox in the options page"
   },
   "enableStrictBlockLabel": {
-    "message": "Strikte blokkearring ynskeakelje",
+    "message": "Strange blokkearring ynskeakelje",
     "description": "Label for a checkbox in the options page"
   },
   "enableStrictBlockLegend": {
-    "message": "Navigaasje nei in potinsjeel net-winske websites sil blokkearre wurde, en jo krije in opsje om troch te gean.",
+    "message": "Navigaasje nei potinsjeel net-winske websites wurdt blokkearre, en jo krije de opsje om troch te gean.",
     "description": "Label for a checkbox in the options page"
   },
   "findListsPlaceholder": {
@@ -248,15 +248,15 @@
     "description": "Webpage title for the strict-blocked page"
   },
   "strictblockSentence1": {
-    "message": "uBO Lite hat opkeard dat de folgjende side laden wurd:",
+    "message": "uBO Lite hat it laden fan de folgjende side opkeard:",
     "description": "Sentence used in the strict-blocked page"
   },
   "strictblockReasonSentence1": {
-    "message": "The page was blocked because of a matching filter in {{listname}}.",
+    "message": "De side is blokkearre fanwegen in oerienkommend filter yn {{listname}}.",
     "description": "Text informing about what is causing the page to be blocked"
   },
   "strictblockRedirectSentence1": {
-    "message": "The blocked page wants to redirect to another site. If you choose to proceed, you will navigate directly to: {{url}}",
+    "message": "De blokkearre side wol jo omliede nei in oare website. As jo trochgean, navigearje jo streekrjocht nei: {{url}}",
     "description": "Text warning about an incoming redirect"
   },
   "strictblockNoParamsPrompt": {
@@ -268,7 +268,7 @@
     "description": "A button to go back to the previous webpage"
   },
   "strictblockClose": {
-    "message": "Slút dit finster",
+    "message": "Dit finster slute",
     "description": "A button to close the current tab"
   },
   "strictblockDontWarn": {
