--- a/src/_locales/br_FR/messages.json
+++ b/src/_locales/br_FR/messages.json
@@ -1160,7 +1160,7 @@
     "description": "label to be used for the parameter-less URL: https://cloud.githubusercontent.com/assets/585534/9832014/bfb1b8f0-593b-11e5-8a27-fba472a5529a.png"
   },
   "docblockedFoundIn": {
-    "message": "Hag a vez kavet e-barzh:",
+    "message": "Hag a zo kavet e-barzh:",
     "description": "English: List of filter list names follows"
   },
   "docblockedBack": {
