--- a/src/_locales/ar/messages.json
+++ b/src/_locales/ar/messages.json
@@ -104,7 +104,7 @@
     "description": "For the new mobile-friendly popup design"
   },
   "popupBlockedSinceInstall_v2": {
-    "message": "حُجِب منذ التنصيب",
+    "message": "تم حظره منذ التثبيت",
     "description": "For the new mobile-friendly popup design"
   },
   "popupDomainsConnected_v2": {
@@ -128,7 +128,7 @@
     "description": "Tooltip used for the logger icon in the panel"
   },
   "popupTipReport": {
-    "message": "التقرير عن مُشكلة في الموقع",
+    "message": "الإبلاغ عن مشكلة في هذا الموقع",
     "description": "Tooltip used for the 'chat' icon in the panel"
   },
   "popupTipNoPopups": {
