--- a/platform/mv3/extension/_locales/el/messages.json
+++ b/platform/mv3/extension/_locales/el/messages.json
@@ -36,7 +36,7 @@
     "description": "Tooltip used for the 'chat' icon in the panel"
   },
   "popupTipDashboard": {
-    "message": "Ανοίξτε τον πίνακα ελέγχου",
+    "message": "Άνοιγμα του πίνακα εργαλείων",
     "description": "English: Click to open the dashboard"
   },
   "popupMoreButton": {
@@ -168,7 +168,7 @@
     "description": "Text for button which open an external webpage in Support pane"
   },
   "firstRunSectionLabel": {
-    "message": "Καλώς ήρθατε",
+    "message": "Καλώς ορίσατε",
     "description": "The header text for the welcome message section"
   },
   "firstRunDescription": {
@@ -232,11 +232,11 @@
     "description": "Label for a checkbox in the options page"
   },
   "enableStrictBlockLabel": {
-    "message": "Enable strict blocking",
+    "message": "Ενεργοποίηση αυστηρής φραγής",
     "description": "Label for a checkbox in the options page"
   },
   "enableStrictBlockLegend": {
-    "message": "Navigation to potentially undesirable sites will be blocked, and you will be offered the option to proceed.",
+    "message": "Θα απετραπεί η πρόσβαση σε πιθανά ανεπιθύμητους ιστοτόπους. Θα σας προσφερθεί η επιλογή να συνεχίσετε.",
     "description": "Label for a checkbox in the options page"
   },
   "findListsPlaceholder": {
@@ -244,11 +244,11 @@
     "description": "Placeholder for the input field used to find lists"
   },
   "strictblockTitle": {
-    "message": "Page blocked",
+    "message": "Αποκλησμένη σελίδα",
     "description": "Webpage title for the strict-blocked page"
   },
   "strictblockSentence1": {
-    "message": "uBO Lite has prevented the following page from loading:",
+    "message": "Το uBO Lite εμπόδισε τη φόρτωση στης παρακάτω σελίδας:",
     "description": "Sentence used in the strict-blocked page"
   },
   "strictblockReasonSentence1": {
@@ -260,7 +260,7 @@
     "description": "Text warning about an incoming redirect"
   },
   "strictblockNoParamsPrompt": {
-    "message": "without parameters",
+    "message": "χωρίς παραμέτρους",
     "description": "Label to be used for the parameter-less URL"
   },
   "strictblockBack": {
